--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
-<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v with a photograph, a full list of grades and courses, plus the start/end dates and requirements of your thesis or project. 
-s.</p>
+<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v with a photograph, a full list of grades and courses, plus the start/end dates and requirements of your thesis or project.</p>
           </div>
           <div class="col-md-5">
           <br> <br>
@@ -254,7 +253,7 @@ s.</p>
           	<div align="center">
           	<div style="padding: 10px; background-color: #4485E6; border:2px solid #4485E6;">
           		<h2 style="color: White">Interested in what we do<br>and looking for work?<br>Background in computer science,<br>AI, or similar?</h2>
-          		<p style="color: White"><a href="mailto:kate.backhouse@nlc.nl?Subject=Possibilities at NBT" target="_top" style="color: white; text-decoration: underline;">Get in touch</a> to find out possibilities<br></p>
+          		<p style="color: White"><a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Possibilities at NBT" target="_top" style="color: white; text-decoration: underline;">Get in touch</a> to find out possibilities<br></p>
   			</div>
   			</div>
           </div>
