reverted the last change

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
 <p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? <br>
-<ul>Please send us a motivated <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> including the following attachments:
+Please send us a motivated <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> including the following attachments:
+<ul>
 	<li>CV with photo</li>
 	<li>A list of bachelor and master courses, including grades</li>
 	<li>The desired dates to start and finish your internship project</li>
