updated title of internship description

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
         <div class="row">
           <div class="col-md-7">
             <h6>Career</h6>
-            <h2>Internship or Master Thesis Opportunity at NBT Analytics </h2>
+            <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
             <p> NBT Analytics is based on the open source Neurophysiological Biomarker Toolbox developed by the Neuronal Oscillations and Cognition Group at the Center for Neurogenomics and Cognitive Research (CNCR), Vrije Universiteit Amsterdam. Currently, NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What’s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company. 
 </p>
 		<ul><b>Skills and Competences:</b>
