--- a/index.html
+++ b/index.html
@@ -188,28 +188,51 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
             	<h2>NBT Analytics attends Innovation for Health conference</h2>
             	<p>On Thursday February 18th NBT Analytics will attend the Innovation for Health conference in Rotterdam. The conference, all about shaping the future of healthcare, has over 800 delegates, influential speakers, and inspiring exhibitions. NBT’s scientific developer, Sonja Simpraga, will be presenting her work on the development of a drug-specific index in a poster session.</p>
            		<img class="img-responsive" src="img/innovationfh.png">
-           		</div>
-            	<div class="col-md-4">
+           </div>
+           <div class="col-md-4">
             	<h6>` </h6>
             	<h2>January, 2016</h2>
             	<h2>NBT Analytics celebrates funding success</h2>
             	<p>This week the Amsterdam based startup NBT Analytics was awarded a grant of €40,000 by technology foundation STW. The grant awarded by STW, whose goal is to promote knowledge transfer between technical scientists and users, will be used for business development of the company.</p>
           		<div align="center">
-          		<img class="img-responsive" src="img/stw.png">
+          			<img class="img-responsive" src="img/stw.png">
           		</div>
-          		</div>
-          		<div class="col-md-4">
-          		<h6> `</h6>
-         		<h2>December, 2015</h2>
-          		<h2>NBT Analytics hires Senior Business Developer</h2>
-        		<p>NBT Analytics has hired Senior Business Developer Menno Noorlander of NexusNorth. With over 10 years of experience in sales, strategy, and marketing, Menno is a valuable asset to the team.</p>
-         		<br><br>
-         		<br><br>
-         		<div align="center">
+          </div>
+          <div class="col-md-4">
+          	<h6> `</h6>
+         	<h2>December, 2015</h2>
+          	<h2>NBT Analytics hires Senior Business Developer</h2>
+        	<p>NBT Analytics has hired Senior Business Developer Menno Noorlander of NexusNorth. With over 10 years of experience in sales, strategy, and marketing, Menno is a valuable asset to the team.</p>
+         	<br><br>
+         	<br><br>
+         	<div align="center">
           		<img class="img-responsive" src="img/mn.jpg">
-          		</div>
-         	</div>
+          	</div>
+         </div>
         </div>
+        <div class="row">
+         	<div class="col-md-12">
+         	<!-- Begin MailChimp Signup Form -->
+		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+		<style type="text/css">
+		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+		</style>
+		<div id="mc_embed_signup">
+			<form action="//nbt-analytics.us7.list-manage.com/subscribe/post?u=b8862a40c7a5a6894f835c708&amp;id=be87e0e44a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    			<div id="mc_embed_signup_scroll">
+			<label for="mce-EMAIL">Subscribe to our newsletter</label>
+			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_be87e0e44a" tabindex="-1" value=""></div>
+    			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    			</div>
+			</form>
+		</div>
+		<!--End mc_embed_signup-->
+         	</div>
+         </div>
       </div>
     </div>
     
