--- a/index.html
+++ b/index.html
@@ -455,8 +455,10 @@ Please send us a motivated <a href="mailto:backhouse.kate@nbt-analytics.com?Subj
 
     <!-- Google Plus -->
     <a href="https://plus.google.com/110309870351784054922" rel="publisher"></a>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
     <!-- Google Plus -->
+    <!-- Addthis -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-569194fdd27147b0" async="async"></script>
+
 
     <!-- Google Services -->
     <script type="text/javascript">
