aligning news section

--- a/index.html
+++ b/index.html
@@ -186,34 +186,32 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
     <div id="news">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <h6>News</h6>
-            	<h2>April, 2016</h2>
-            	<h2>Celebrating four years of open source success!</h2>
-            	<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, <b>reveal new insights on brain activity</b>. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
+        	<div class="col-md-4">
+            		<h6>News</h6>
+            		<h2>April, 2016</h2>
+            		<h2>Celebrating four years of open source success!</h2>
+            		<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, <b>reveal new insights on brain activity</b>. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
 				<br>
 				<br>Our company, NBT Analytics BV, is a spin-off from the VU and we used the toolbox as a foundation for our commercial EEG analysis for drug development in clinical trials. We continue to develop the open-source version of the toolbox, and share findings of new biomarkers with the scientific community, as we believe that collaboration between researchers is essential for the advancement of science. <b>So far in 2016 we have achieved great success</b>, with a preseed load from Innovation Exchange Amsterdam of €100,000, a grant from technology foundation STW, and by securing our first launching customer, we are determined to improve drug development through innovative EEG analysis.
 				<br>
 				<br>If you want to know more about how NBT Analytics can improve your drug analysis, contact <a href="mailto:noorlander.menno@nbt-analytics.com?" target="_top">Menno Noorlander</a>.
-</p>
-           		</center><center><img class="img-responsive" src="img/toolbox.png" align="middle"></center>
-          		</div>
-         	</div>
-<div class="col-md-4">
-            	<h2>Feburary, 2016</h2>
-            	<h2>NBT Analytics attends Innovation for Health conference</h2>
-            	<p>On Thursday February 18th NBT Analytics will attend the Innovation for Health conference in Rotterdam. The conference, all about shaping the future of healthcare, has over 800 delegates, influential speakers, and inspiring exhibitions. NBT’s scientific developer, Sonja Simpraga, will be presenting her work on the development of a drug-specific index in a poster session.</p>
+			</p>
+           		<img class="img-responsive" src="img/toolbox.png">
+          	</div>
+		<div class="col-md-4">
+			<h6>` </h6>
+            		<h2>Feburary, 2016</h2>
+            		<h2>NBT Analytics attends Innovation for Health conference</h2>
+            		<p>On Thursday February 18th NBT Analytics will attend the Innovation for Health conference in Rotterdam. The conference, all about shaping the future of healthcare, has over 800 delegates, influential speakers, and inspiring exhibitions. NBT’s scientific developer, Sonja Simpraga, will be presenting her work on the development of a drug-specific index in a poster session.</p>
            		<img class="img-responsive" src="img/innovationfh.png">
-           </div>
-           <div class="col-md-4">
-            	<h6>` </h6>
-            	<h2>January, 2016</h2>
-            	<h2>NBT Analytics celebrates funding success</h2>
-            	<p>This week the Amsterdam based startup NBT Analytics was awarded a grant of €40,000 by technology foundation STW. The grant awarded by STW, whose goal is to promote knowledge transfer between technical scientists and users, will be used for business development of the company.</p>
-          		<div align="center">
-          			<img class="img-responsive" src="img/stw.png">
-          		</div>
-          </div>
+        	 </div>
+           	<div class="col-md-4">
+            		<h6>` </h6>
+            		<h2>January, 2016</h2>
+            		<h2>NBT Analytics celebrates funding success</h2>
+            		<p>This week the Amsterdam based startup NBT Analytics was awarded a grant of €40,000 by technology foundation STW. The grant awarded by STW, whose goal is to promote knowledge transfer between technical scientists and users, will be used for business development of the company.</p>
+			<img class="img-responsive" src="img/stw.png">
+          	</div>
         </div>
         <div class="row">
         	<div class="col-md-4">
