--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h6>Our services</h6>
+             <h6>Our services</h6>
             <h2>
               Comprehensive mapping of drug-induced changes in brain activity.
             </h2>
@@ -125,12 +125,21 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
               <li>Comprehensive mapping of EEG biomarkers</li>
               <li>Identification of drug specific indices</li>
             </ul>
-            <br> <br>
+       
+            <p style="font-size: 20px;font-weight: bold;">We enable:</p>
+            <ul>
+              <li>Deeper insights into effect of drug or disease</li>
+              <li>Retrospective analysis</li>
+              <li>Support for patient stratification</li>
+              <li>Smaller experimental groups, high statistical power</li>
+              <li>Increased robustness of results</li>
+            </ul>
+      
             <p style="font-size: 20px;font-weight: bold;">What makes us different:</p>
             <ul>
               <li>Tailored service</li>
               <li>Transparent analyses</li>
-              <li>Scientific mindset</li>
+              <li>Accurate results</li>
             </ul>
           </div>
         </div>
@@ -143,7 +152,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
           <div class="col-md-6">
             <img class="img-responsive" src="img/Montez2009.png">
            <br>
-            <figcaption align="justify">Figure1: EEG is sensitive to modulations in brain activity found in many neurological disorders. Our method of integrating multiple biomarkers can result in the superior outcome of stratifying patients into different groups.</figcaption>
+            <figcaption align="justify">Figure 1: EEG is sensitive to modulations in brain activity found in many neurological disorders. Our method of integrating multiple biomarkers can result in the superior outcome of stratifying patients into different groups.</figcaption>
             <br>
           </div>
           <div class="col-md-6">
@@ -188,56 +197,16 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
         	<div class="row">
         		<div class="col-md-4">
         			<h6>News</h6>
-         			<div class="addthis_horizontal_follow_toolbox"></div>
-         		</div>
-         		<div class="col-md-4">
-         		<br>
-         		<!-- Begin MailChimp Signup Form -->
-			<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-			<style type="text/css">
-			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   		We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-			</style>
-			<div id="mc_embed_signup">
-			<form action="//nbt-analytics.us7.list-manage.com/subscribe/post?u=b8862a40c7a5a6894f835c708&amp;id=be87e0e44a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    			<div id="mc_embed_signup_scroll">
-			<label for="mce-EMAIL">Subscribe to our newsletter</label>
-			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_be87e0e44a" tabindex="-1" value=""></div>
-    			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    			</div>
-			</form>
-			</div>
-			<!--End mc_embed_signup-->
-         	</div>
-         </div>
-        <div class="row">
-        	<div class="col-md-4">
-            		<br>
-            		<h2>April, 2016</h2>
-            		<h2>Celebrating four years of open source success!</h2>
-            		<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, <b>reveal new insights on brain activity</b>. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
+         			<h2>April, 2016</h2>
+            	<h2>Celebrating four years of open source success!</h2>
+            	<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, <b>reveal new insights on brain activity</b>. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
 				<br>
 				<br>Our company, NBT Analytics BV, is a spin-off from the VU and we used the toolbox as a foundation for our commercial EEG analysis for drug development in clinical trials. We continue to develop the open-source version of the toolbox, and share findings of new biomarkers with the scientific community, as we believe that collaboration between researchers is essential for the advancement of science. <b>So far in 2016 we have achieved great success</b>, with a preseed load from Innovation Exchange Amsterdam of €100,000, a grant from technology foundation STW, and by securing our first launching customer, we are determined to improve drug development through innovative EEG analysis.
 				<br>
 				<br>If you want to know more about how NBT Analytics can improve your drug analysis, contact <a href="mailto:noorlander.menno@nbt-analytics.com?" target="_top">Menno Noorlander</a>.
-			</p>
-          	</div>
-		<div class="col-md-4">
-			<br>
-            		<h2>Feburary, 2016</h2>
-            		<h2>NBT Analytics attends Innovation for Health conference</h2>
-            		<p>On Thursday February 18th NBT Analytics will attend the Innovation for Health conference in Rotterdam. The conference, all about shaping the future of healthcare, has over 800 delegates, influential speakers, and inspiring exhibitions. NBT’s scientific developer, Sonja Simpraga, will be presenting her work on the development of a drug-specific index in a poster session.</p>
-           		<img class="img-responsive" src="img/innovationfh.png">
-        	 </div>
-           	<div class="col-md-4">
-            		<br>
-            		<h2>January, 2016</h2>
-            		<h2>NBT Analytics celebrates funding success</h2>
-            		<p>This week the Amsterdam based startup NBT Analytics was awarded a grant of €40,000 by technology foundation STW. The grant awarded by STW, whose goal is to promote knowledge transfer between technical scientists and users, will be used for business development of the company.</p>
-			<img class="img-responsive" src="img/stw.png">
+</p>
+           		</center><center><img class="img-responsive" src="img/toolbox.png" align="middle"></center>
+          		</div>
           	</div>
         </div>
       </div>
@@ -248,10 +217,11 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
         <div class="row">
           <div class="col-md-7">
             <h6>Career</h6>
-            <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
-            <p> NBT Analytics is based on the open source Neurophysiological Biomarker Toolbox developed by the Neuronal Oscillations and Cognition Group at the Center for Neurogenomics and Cognitive Research (CNCR), Vrije Universiteit Amsterdam. Currently, NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What’s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company. 
+             <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
+            <p align="justify"> NBT Analytics is based on the open source Neurophysiological Biomarker Toolbox developed by the Neuronal Oscillations and Cognition Group at the Center for Neurogenomics and Cognitive Research (CNCR), Vrije Universiteit Amsterdam. Currently, NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What’s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.
 </p>
-		<ul><b>Skills and Competences:</b>
+		<p>Skills and Competences:</p>
+		<ul>
 			<li>Final year of Master in Computer Science, AI or similar</li>
 			<li>Profound knowledge of Matlab (or similar language), including object-oriented and GUI programming </li>
 			<li>Good knowledge of Linux based systems</li>
@@ -263,7 +233,8 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>Initiative and the capability to deliver high-quality work on time</li>
 			<li>A desire to make a difference in healthcare</li>
 		</ul>
-		<ul><b>We offer:</b>
+		<p>We offer:</p>
+		<ul>
 			<li>Supervision of academic content and project management</li>
 			<li>Development of advanced MATLAB/NBT</li>
 			<li>Learning to work in a team to develop complex software packages</li>
@@ -271,28 +242,27 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
-<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? <br>
-Please send us a motivated <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> including the following attachments:
-<ul>
-	<li>CV with photo</li>
-	<li>A list of bachelor and master courses, including grades</li>
-	<li>The desired dates to start and finish your internship project</li>
-</ul>
-</p>
+		<p align="justify">This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months.</p>
           </div>
-          <div class="col-md-5">
-          <br> <br>
-          <br> <br>
-          <br> <br>
-          <br> <br>
-          <br> <br>
-          <br> <br>
-          	<div align="center">
+          <br> </br>
+          <br> </br>
+          <br> </br>
+          <br> </br>
+          <br> </br>
+          <br> </br>
+          <br> </br>
+          <div class="col-md-4">
+          	<div align="justify">
           	<div style="padding: 10px; background-color: #4485E6; border:2px solid #4485E6;">
-          		<h2 style="color: White">Interested in what we do<br>and looking for work?<br>Background in computer science,<br>AI, or similar?</h2>
-          		<p style="color: White"><a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Possibilities at NBT" target="_top" style="color: white; text-decoration: underline;">Get in touch</a> to find out possibilities<br></p>
-  			</div>
-  			</div>
+          	<p style="color: White"> Do you match the description and are interested in what we do? 
+          	Please send us a motivated <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Internship/Thesis at NBT" target="_top" style="color: white; text-decoration: underline;">email</a> including the following attachments:</p>
+<p style="color: White">
+<li style="color: White">CV with photo
+<li style="color: White">List of bachelor & master courses, inc. grades</br>
+<li style="color: White">Desired start & end dates of project</br>
+</p>
+</div>
+</div>
           </div>
         </div>
       </div>
