--- a/index.html
+++ b/index.html
@@ -194,6 +194,34 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 
     <div id="news">
       <div class="container">
+      	+        	<div class="row">
+ +        		<div class="col-md-4">
+ +        			<h6>News</h6>
+ +         			<div class="addthis_horizontal_follow_toolbox"></div>
+ +         		</div>
+ +         		<div class="col-md-4">
+ +         		<h6>` </h6>
+ +         		<!-- Begin MailChimp Signup Form -->
+ +			<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+ +			<style type="text/css">
+ +			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+ +			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+ +	   		We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+ +			</style>
+ +			<div id="mc_embed_signup">
+ +			<form action="//nbt-analytics.us7.list-manage.com/subscribe/post?u=b8862a40c7a5a6894f835c708&amp;id=be87e0e44a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+ +    			<div id="mc_embed_signup_scroll">
+ +			<label for="mce-EMAIL">Subscribe to our newsletter</label>
+ +			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+ +    			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+ +    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_be87e0e44a" tabindex="-1" value=""></div>
+ +    			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+ +    			</div>
+ +			</form>
+ +			</div>
+ +			<!--End mc_embed_signup-->
+ +         	</div>
+ +         </div>
         	<div class="row">
         		<div class="col-md-12">
         			<h6>News</h6>
@@ -215,7 +243,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 <div id="career">
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
+          <div class="col-md-8">
             <h6>Career</h6>
              <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
             <p align="justify"> NBT Analytics is based on the open source Neurophysiological Biomarker Toolbox developed by the Neuronal Oscillations and Cognition Group at the Center for Neurogenomics and Cognitive Research (CNCR), Vrije Universiteit Amsterdam. Currently, NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What’s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.
