--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
               </div>
             </div>
             <div class="person">
-              <img src="img/head-thumbs-x.png">
+              <img src="img/head-thumbs-rds.png">
               <div class="profile">
                 <div class="name">Rashel de Stefanis</div>
                 <div class="position">Jr Developer</div>
