added news story

--- a/index.html
+++ b/index.html
@@ -186,17 +186,28 @@
     <div id="news">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+        <div class="col-md-6">
+            <h6>News</h6>
+            	<h2>May, 2016</h2>
+            	<h2>NBT Analytics goes to outsourcing conference</h2>
+            	<p align="justify">Next week on the 17th and 18th of May, Kate Backhouse, business developer at NBT Analytics will attend the Outsourcing in Clinical Trials conference in Paris. This conference is a great chance to get in touch with others from the industry, to form new partnerships, and to get up to date with the latest developments. </p>
+           		<br>
+           		</center><center><img class="img-responsive" src="img/outsourcing.png" align="middle"></center>
+           		<br>
+           		<p align="justify">Also attending and curious to hear what NBT Analytics can do for you? <a href="mailto:backhouse.kate@nbt-analytics.com?" target="_top">Contact her</a> to make an appointment.<p>
+
+          		</div>        	
+          <div class="col-md-6">
             <h6>News</h6>
             	<h2>April, 2016</h2>
-            	<h2>Celebrating four years of open source success!</h2>
-            	<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, <b>reveal new insights on brain activity</b>. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
+            	<h2>Celebrating four years of open source success</h2>
+            	<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, reveal new insights on brain activity. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
+            	</center><center><img class="img-responsive" src="img/toolbox.png" align="middle"></center>
 				<br>
-				<br>Our company, NBT Analytics BV, is a spin-off from the VU and we used the toolbox as a foundation for our commercial EEG analysis for drug development in clinical trials. We continue to develop the open-source version of the toolbox, and share findings of new biomarkers with the scientific community, as we believe that collaboration between researchers is essential for the advancement of science. <b>So far in 2016 we have achieved great success</b>, with a preseed load from Innovation Exchange Amsterdam of €100,000, a grant from technology foundation STW, and by securing our first launching customer, we are determined to improve drug development through innovative EEG analysis.
 				<br>
-				<br>If you want to know more about how NBT Analytics can improve your drug analysis, contact <a href="mailto:noorlander.menno@nbt-analytics.com?" target="_top">Menno Noorlander</a>.
+				<p align="justify">Our company, NBT Analytics BV, is a spin-off from the VU and we used the toolbox as a foundation for our commercial EEG analysis for drug development in clinical trials. We continue to develop the open-source version of the toolbox, and share findings of new biomarkers with the scientific community, as we believe that collaboration between researchers is essential for the advancement of science.</p>
+				<br>
 </p>
-           		</center><center><img class="img-responsive" src="img/toolbox.png" align="middle"></center>
           		</div>
          	</div>
         </div>
