--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
            		<br>
            		</center><center><img class="img-responsive" src="img/outsourcing.png" align="middle"></center>
            		<br>
-           		<p align="justify">Also attending and curious to hear what NBT Analytics can do for you? <a href="mailto:backhouse.kate@nbt-analytics.com?" target="_top">Contact her</a> to make an appointment.<p>
+           		<p align="justify">Also attending and curious to hear what NBT Analytics can do for you? <a href="mailto:backhouse.kate@nbt-analytics.com" target="_top">Contact her</a> to make an appointment.<p>
 
           		</div>        	
           <div class="col-md-6">
-            <h6>News</h6>
+            <h6></h6>
             	<h2>April, 2016</h2>
             	<h2>Celebrating four years of open source success</h2>
             	<p align="justify">Four years ago on April 18th 2012, the Center for Neurogenomics and Cognitive Research at the Vrije Universiteit Amsterdam (VU) launched the Neurophysiological Biomarker Toolbox. This open-source toolbox, offers an analysis pipeline for EEG biomarker research. Their aim was to create a platform where researchers could share information and through use of the online tools, reveal new insights on brain activity. Currently, the toolbox has more than 1400 registered users from all across the globe, 3400 downloads, and over 2000 unique users per month through the web service. The toolbox has been used in eight peer-reviewed research articles and has formed the core pillar of EEG analysis education for more than 500 students at the VU.
