--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             	</h1>
             	<br>
             	<h2 align="center"> NBT Analytics provides extensive insights
-                <br>on how drugs influence the brain through 
-                <br>a comprehensive selection of EEG biomarkers
+                <br>on how drugs influence the brain through a
+                <br>comprehensive selection of EEG biomarkers
                 <br>and identification of drug specific indices. </h2>
            		<br>
            		<p align="center"><a class="btn btn-primary btn-lg" href="#more" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Scroll down to learn more</a></p>
