--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>EEG analysis for clinical trials | NBT Analytics</title>
-    <meta name="Description" content="NBT Analytics provides insights on how drugs influence the brain.">
+    <meta name="Description" content="NBT Analytics provides extensive insights on how drugs influence the brain through a comprehensive selection of EEG biomarkers and identification of drug specific indices.>
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="canonical" href="http://www.nbt-analytics.com/">
 
@@ -35,14 +35,14 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="EEG analysis for clinical trials | NBT Analytics">
-    <meta property="og:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
+    <meta property="og:description" content="NBT Analytics provides extensive insights on how drugs influence the brain through a comprehensive selection of EEG biomarkers and identification of drug specific indices.">
     <meta property="og:url" content="http://www.nbt-analytics.com/">
     <meta property="og:site_name" content="NBT Analytics">
     <meta property="og:image" content="http://www.nbt-analytics.com/img/logo.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@nbtanalytics">
     <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
-    <meta name="twitter:description" content="NBT Analytics provides insights on how drugs influence the brain.">
+    <meta name="twitter:description" content="NBT Analytics provides extensive insights on how drugs influence the brain through a comprehensive selection of EEG biomarkers and identification of drug specific indices.">
     <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logosmall.png">
     <!-- Social media -->
 
