added phone number

--- a/index.html
+++ b/index.html
@@ -533,6 +533,12 @@
     "https://plus.google.com/+nbt-analytics",
     "https://github.com/NBT-Analytics"
     ]
+    "contactPoint": [
+    { "@type": "ContactPoint",
+      "telephone": "+31 (0) 20 598 6479",
+      "contactType": "customer service"
+    }
+  ]
     }
     </script>
     <!-- Social Media -->
