--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <p style="color:#414A9A;LINE-HEIGHT:30px;font-size:150%;" align="center">
              &ldquo;NBT Analytics provides
             <br> a state-of-the-art statistical analysis
-            <br> of which their cholinergic index can add considerable value
-            <br>to a variety of clinical trials.
+            <br> of which their cholinergic index can add
+            <br>considerable value to a variety of clinical trials.
             <br>We will continue to collaborate 
             <br>with NBT Analytics to provide 
             <br> the best analyses to our sponsors.&rdquo;</p>
