--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
             <br>
             <p style="color:#414A9A;LINE-HEIGHT:30px;font-size:150%;" align="center">
              &ldquo;NBT Analytics provides
-            <br> a state-of-the-art statistical analysis
-            <br> of which their cholinergic index can add
-            <br>considerable value to a variety of clinical trials.
+            <br>a state-of-the-art statistical analysis
+            <br>of which their cholinergic index can 
+            <br>add considerable value to a variety of clinical trials.
             <br>We will continue to collaborate 
             <br>with NBT Analytics to provide 
-            <br> the best analyses to our sponsors.&rdquo;</p>
+            <br>the best analyses to our sponsors.&rdquo;</p>
             <br>
             <p style="color:#414A9A" align="center">Geert-Jan Groeneveld MD PHD
             <br>Research Director. 
