--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
              &ldquo;NBT Analytics provides
             <br>a state-of-the-art statistical analysis
             <br>of which their cholinergic index can 
-            <br>add considerable value to a variety of clinical trials.
+            <br>add considerable value to a 
+            <br>variety of clinical trials.
             <br>We will continue to collaborate 
             <br>with NBT Analytics to provide 
             <br>the best analyses to our sponsors.&rdquo;</p>
