--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <br>and identification of drug specific indices. </h2>
            		<br>
            		<p align="center"><a class="btn btn-primary btn-lg" href="#more" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Scroll down to learn more</a></p>
-                			<div align="center" class="addthis_horizontal_follow_toolbox"></div>
+                <div class="addthis_horizontal_follow_toolbox"></div>
           		</div>
           		
           </div>
