--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 	<div class="container">
         <div class="row">
           <div class="col-md-12">
+             <div class="addthis_horizontal_follow_toolbox"></div>
+             <a href="http://eepurl.com/RZE-1" style="color:#FFF" target="_blank">Subscribe to our newsletter</a> 
           		<center>
           		<br>
             	<img alt="NBT Analytics" class="img-responsive" src="img/logo.png">
@@ -97,7 +99,7 @@
                 <br>and identification of drug specific indices. </h2>
            		<br>
            		<p align="center"><a class="btn btn-primary btn-lg" href="#more" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Scroll down to learn more</a></p>
-          		</div>
+          </div>
           </div>
           </center>
         </div>
