adding mail links

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           <div class="col-md-3">
             <h6>Contact</h6>
             <p>
-              E-mail: info@nbt-analytics.com <br>
+              E-mail: <a style="color:#FFF" href="mailto:info@nbt-analytics.com" target="_top">info@nbt-analytics.com</a> <br>
               Call: +31 (0) 20 598 6479
             <div class="addthis_horizontal_follow_toolbox"></div>
              <a href="http://eepurl.com/RZE-1" style="color:#FFF" target="_blank">Subscribe to our newsletter</a> 
@@ -564,21 +564,22 @@
     <!-- Addthis -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-569194fdd27147b0" async="async"></script>
     <!-- Google Services -->
-    <script type="text/javascript">
-    /* <![CDATA[ */
-    var google_conversion_id = 1051244920;
-    var google_conversion_label = "YbPCCI6ZtgoQ-PKi9QM";
-    var google_custom_params = window.google_tag_params;
-    var google_remarketing_only = true;
-    /* ]]> */
-    </script>
-    <script async type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-    </script>
-    <noscript>
-    <div style="display:inline;">
-    <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1051244920/?value=1.00&amp;currency_code=DKK&amp;label=YbPCCI6ZtgoQ-PKi9QM&amp;guid=ON&amp;script=0">
-    </div>
-    </noscript>
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1051244920;
+var google_conversion_label = "wXWdCKech2kQ-PKi9QM";
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1051244920/?value=1.00&amp;currency_code=DKK&amp;label=wXWdCKech2kQ-PKi9QM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
+
     <!-- Google Services -->
   </body>
 </html>
