--- a/index.html
+++ b/index.html
@@ -272,10 +272,13 @@
 	</p>
 	<p align="justify">
 			We welcome requests for collaborations. This can be in the form of joint grant applications where you as an academic researcher will need an SME partner. Or, if you have a medical research question and would like to outsource the complex task of making the best of your EEG data.
-	</p><p align="justify">
+	</p>
+    <p align="justify">
 			Currently, we are a partner of the CognitionNet project funded by the EC under FP7-PEOPLE-2013 (607508).</p>
-			<p></p>
 			<p align="justify">For questions, please contact <a href="mailto:klaus.linkenkaer@nbt-analytics.com" target="_top">Dr Klaus Linkenkaer-Hansen.</a> </p>
+            <p align="justify">
+             We also have a research version of the NBT toolbox available, <a href="http://nbtresearch.nbtwiki.net"> click here for more information</a>  
+            </p>    
     </div>
 </div>
 </div>
@@ -343,7 +346,7 @@
              <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
                        <p align="justify">NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What???s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.</p>
 						<p align="justify"> Do you match the description and are interested in what we do?</p> 
-						<p>Please send us a motivated email to <u>backhouse.kate@nbt-analytics.com</u> including the following attachments:</p>
+						<p>Please send us a motivated email to <a href="mailto:backhouse.kate@nbt-analytics.com">backhouse.kate@nbt-analytics.com </a> including the following attachments:</p>
 						<p>
 						<li>CV with photo
 						</li><li>List of bachelor & master courses, inc. grades<br>
