fixed mailto color

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
              <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
                        <p align="justify">NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What???s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.</p>
 						<p align="justify"> Do you match the description and are interested in what we do?</p> 
-						<p>Please send us a motivated email to <a href="mailto:backhouse.kate@nbt-analytics.com">backhouse.kate@nbt-analytics.com </a> including the following attachments:</p>
+						<p>Please send us a motivated email to <a style="color:#FFF" href="mailto:backhouse.kate@nbt-analytics.com">backhouse.kate@nbt-analytics.com </a> including the following attachments:</p>
 						<p>
 						<li>CV with photo
 						</li><li>List of bachelor & master courses, inc. grades<br>
